--- a/styles.css
+++ b/styles.css
@@ -234,7 +234,12 @@ a {
     color: var(--just-white);
     font-size: 1.7rem;
     font-weight: 700;
-    transition: all 0.3s ease-in-out 0s ; 
+    transition: all 0.3s ease-in-out 0s ;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
 }
 .resume--button:hover{
     transform: scale(1.1); 
@@ -419,7 +424,7 @@ a {
 }
 
 .project {
-    height: 280px;
+    height: 370px;
     width: 280px;
     background-color: whitesmoke;
     padding: 15px;
@@ -503,7 +508,7 @@ a {
 
 @media screen and (min-width: 360px) {
     .project {
-        height: 280px;
+        height: 370px;
         width: 320px;
     }
     .portfolioDescription{
